# dynastes

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: sprite-sheet.fs  state-machine.asm  state-machine.ron
examples/: bevy_animation.rs  bevy_load_animation.rs
src/: bevy.rs  lib.rs  state_machine.rs
src/bevy/: bevy_serde.rs  loader.rs  mod.rs  plugin.rs
src/state_machine/: mod.rs  plugin.rs  state_container.rs  state_id.rs  state_instance.rs  traits.rs
src/states/: index.rs  mod.rs
