[package]
name = "dynastes"
version = "0.1.0"
edition = "2021"
authors = ["Juniper Parsons"]
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", optional = true }
log = "0.4.19"
ron = { version = "0.8.0", optional = true }
serde = { version = "1.0", features = ['derive'] }

[dev-dependencies]
env_logger = "0.10.0"

[features]
default = []
bevy = ['dep:bevy', 'dep:ron']

[lib]
crate-type = ["rlib"]
edition = "2021"

[[example]]
name = "bevy_animation"
required-features = ['bevy']


[[example]]
name = "bevy_load_animation"
required-features = ['bevy']
